<resources>
    <string name="toolbarTopText">CALIFICA PROFESORES</string>
    <string name="app_name">CalificaProfesores</string>
    <string name="LoginText">LOGIN</string>
    <string name="SignInText">INGRESAR</string>
    <string name="SignOutText">SALIR</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">ActivitySignUp</string>
    <string name="HintUsername">username</string>
    <string name="HintPassword">password</string>
    <string name="SignUpText">REGISTRARSE</string>
    <string name="TextoBienvenido">Bienvenido, usuario</string>
    <string name="SearchProfessor">Buscar profesor</string>
    <string name="SearchCourse">Buscar curso</string>
    <string name="HintEmail">email</string>
    <string name="SearchClass">Buscar clase</string>
    <string name="GuestButon">INVITADO</string>
    <string name="ListProfessor">Buscar profesor</string>
    <string name="title_activity_professor_list">ActivityProfessorList</string>
    <string name="ListProfessorTitle">Lista de profesores</string>
    <string name="TextProfessor">Profesor</string>
    <string name="TextSchool">Universidad</string>
    <string name="ProfessorName">Tiger Woods</string>
    <string name="SelectAll">Todas</string>
    <string name="RateText">Calificar</string>
    <string name="NumberExample">4.5</string>
    <string name="TextInfoCal"><b>CE</b>: Coeficiente de endendimiento\n<b>CA</b>: Conocimiento aparente\n<b>A</b>: Amabilidad</string>
    <string name="HintProfessor">Ingresa profesor ...</string>
    <string name="HintCourse">Ingresa curso ...</string>
    <string name="searchIcon">icono de busqueda</string>
    <string name="Fac">Uni</string>
    <string name="ScoreTitle"><b>Total</b></string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_cal_prof">ActivityCalProf</string>
    <string name="CEtext">Explicaciones</string>
    <string name="CAtext">Conocimiento</string>
    <string name="Atext">Amabilidad</string>
    <string name="TextRegisterAndVote">Registrarse &amp; votar</string>
    <string name="InfoCE">Habilidad del profesor como orador para que en todo momento se entienda en el contexto en el que articula sus ideas sin la necesidad de un esfuerzo abrumador por parte del alumno</string>
    <string name="InfoCA">Nivel de conocimiento que parece tener el profesor acerca de la materia</string>
    <string name="InfoA">Predisposición del profesor ante dudas, sean para aprender, sean para entender los criterios de evaluacion en los examenes</string>
    <string name="In">en</string>
    <string name="DefaultSubject">Golf</string>
    <string name="ClassText">Probabilidad y Estadistica </string>
    <string name="ScoreText"><b>Total</b></string>
    <string name="textHacerCosas"><b>BUSCAR</b></string>
    <string name="configText">OPCIONES</string>
    <string name="textNovedades">NOVEDADES</string>
    <string name="textProximamente">PROXIMAMENTE</string>
    <string name="searchUniText">Buscar facultad</string>
    <string name="HintFacultad">Ingresa facultad ...</string>
    <string name="AddFacultad">¿No está tu facultad?</string>
    <string name="NoCourseText">¿No está tu clase?</string>
    <string name="clase">clase</string>
    <string name="OpinarTitle">OPINAR SOBRE</string>
    <string name="TextPuntaje">VALORACIÓN</string>
    <string name="OpinionText">OPINIÓN</string>
    <string name="CambiarOpinion">ACTUALIZAR OPINIÓN</string>
    <string name="tuOpinion">TU OPINIÓN</string>
    <string name="CursadoText">¿Has cursado esta materia? ¡Comparte tu opinión!</string>
    <string name="TextOpinar">OPINAR</string>
    <string name="TuOpinion">Escribe tu opinión ...</string>
    <string name="EditProfileText">EDITAR PERFIL</string>
    <string name="SearchText">BUSCAR</string>
    <string name="TextSalir">SALIR</string>
    <string name="DrawerOpen">OPEN</string>
    <string name="DrawerClose">CLOSE</string>
    <string name="AddMat">AGREGAR MATERIA</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="CourseScoreTitle">CALIFICACIÓN GENERAL</string>
    <string name="BestProfessosTitle">MEJORES PROFESORES</string>
    <string name="TextAmabilidad">Amabilidad</string>
    <string name="TextConocimiento">CONOCIMIENTO</string>
    <string name="TextConocimiento2">Conocimiento</string>
    <string name="TextClases">Clases</string>
    <string name="CursadoProfText">¿Has cursado con el profesor? ¡Comparte tu opinión!</string>
    <string name="SeleccionarMaterias">SELECCIONAR MATERIAS</string>
    <string name="TextCalificar">CALIFICAR</string>
    <string name="TextAnonimidad">ANÓNIMO</string>
    <string name="NoOpinarText">NO OPINAR</string>
    <string name="SearchTextMateria">BUSCAR MATERIA</string>
    <string name="SearchTextProfesor">BUSCAR PROFESOR</string>
    <string name="TextNovedades">NOVEDADES</string>
    <string name="facebook_app_id">376783766453849</string>
    <string name="fb_login_protocol_scheme">fb376783766453849</string>
    <string name="NoHayInfoText">No hay información</string>
    <string name="SeElPrimeroText">¡SE EL PRIMERO!</string>
    <string name="TextAddUni">AGREGAR INSTITUCIÓN</string>
    <string name="TextAddClass">AGREGAR MATERIA</string>
    <string name="TextAddProf">AGREGAR PROFESOR</string>
    <string name="TextEnlazar">ENLAZAR</string>
    <string name="TextoBotonSelFacultad">CAMBIAR FACULTAD</string>
    <string name="TextAtribuciones">ATRIBUCIONES</string>

    <string name="atribucion1">

    </string>

    <string name="atribucion2">
        <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion3">
        <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion4">
        <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion5">
        <div>Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion6">
        <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion7">
        <div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion8">
        <div>Icons made by <a href="https://www.flaticon.com/authors/designmodo" title="Designmodo">Designmodo</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion9">
        <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion10">
        <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion11">
        <div>Icons made by <a href="https://www.flaticon.com/authors/alfredo-hernandez" title="Alfredo Hernandez">Alfredo Hernandez</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion12">
        <div>Icons made by <a href="https://www.flaticon.com/authors/creaticca-creative-agency" title="Creaticca Creative Agency">Creaticca Creative Agency</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion13">
        <div>Icons made by <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>

    <string name="atribucion14">
        <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div>
    </string>
    <string name="TextPrivacyPolicy">POLÍTICA DE PRIVACIDAD</string>

    <string name="TextVerificarMaterias">
        REVISAR MATERIAS
    </string>

    <string name="TextVerificarProfesores">
        REVISAR PROFESORES
    </string>

    <string name="TextWriteNews">
        REDACTAR NOTICIA
    </string>
    <string name="TextVerificar">
        VERIFICAR
    </string>
    <string name="TextAceptar">ACEPTAR</string>
    <string name="TextRechazar">RECHAZAR</string>
    <string name="NotFoundText">NO ENCONTRADO</string>
    <string name="SearchFailureText">EL CONTENIDO QUE BUSCAS NO HA SIDO ENCONTRADO</string>
    <string name="notfound404">404</string>

</resources>

