<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gnd.calificaprofesores.ActivityLogin"
    android:background="@color/background_color">

    <include
        layout="@layout/toolbar_layout"
        android:layout_height="61dp" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/LoginText"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="301dp"
        android:layout_height="142dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginText">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/signUpButton"
            android:layout_below="@+id/LoginText"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/SignInText"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="161dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/LoginText"
            android:layout_below="@+id/signInButton"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/SignUpText"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="45dp" />

        <Button
            android:id="@+id/GuestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/LoginText"
            android:layout_below="@+id/signUpButton"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/GuestButon"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="328dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
